--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #f4f4f4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar-wrapper {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 300px;
+  background-color: #003780;
+  color: #f1f1f1;
+  transition: all 0.3s;
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  height: 60px;
+  color: #ebe9e9;
 }
 
-.App-link {
-  color: #61dafb;
+.badge {
+  color: #555700;
+  font-size: 0.8em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-right {
+  margin: 30px;
+  text-align: right;
+}
+
+.contents {
+  display: flex;
+  padding: 20px;
+  height: 100%;
+  margin-left: 320px;
+}
+
+.nav-link {
+  color: #ebe9e9;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.nav-link i {
+  margin-right: 10px;
+}
+
+.section {
+  padding: 10px;
+  margin: 0px 20px 0px 10px;
+  border-bottom: 1px solid #ebe9e9;
+}
+
+.card {
+  margin-right: 20px;
+}
+
+.card i {
+  padding: 10px;
+  float: left;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+.card .fa-clone {
+  background-color: #a1caff;
+  color: #195bb3;
+}
+
+.card .fa-user-friends {
+  background-color: #aeffb5;
+  color: #199e0d;
+}
+
+.card .fa-edit {
+  background-color: #edb3ff;
+  color: #ba4be6;
+}
+
+.card .fa-clock {
+  background-color: #fcb0b0;
+  color: #df0000;
+}
+
+.content-body {
+  display: flex;
+  flex-direction: row;
+}
+
+td .btn {
+  margin-right: 10px;
+}
+
+.input-area {
+  display: flex;
+  flex-direction: row;
+  height: 55px;
+}
+
+.input-area .btn {
+  margin-right: 10px;
+}
+
+.text-icon-button i {
+  margin-right: 5px;
+}
+
+.input-area .input-group {
+  width: 75%;
+}
+
+.pagination {
+  display: flex;
+  justify-content: right;
+  margin: 10px 0px 10px 0px;
+}
+
+.body-wrapper {
+  background-color: white;
+  padding: 20px 20px 20px 20px;
+  margin: 10px 10px 10px 0px;
+  border-radius: 5px;
 }
